- Added footer copyright notice - BUGFIX: White line at bottom of footer - BUGFIX: tag styling -- properly aligned now

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -176,13 +176,14 @@ img {max-width:100%}
 
 #footer {font: 0.65em/1.48 cabin,  dejavu sans, verdana, tahoma, sans-serif; background-color:#023; background-image: linear-gradient(to bottom, #023, #112); color: #feb; padding:0; margin:2.5em 0 0; text-align:left}
 #footer h3, #footer a {color:#feb}
+#copyright a {font-style:italic}
 #footer .row li ,
 #footer .row ul {list-style-type: none;padding:0;padding-right:10px;margin:0;margin-bottom:0.6em}
 #footer .xoxo {margin-left: -0.009em}
 #footer .quarter {width:23%; min-width:180px; margin: 1em}
 #footer .row {margin-left:0}
 
-#footwrap {max-width:950px;margin:auto} 
+#footwrap {max-width:950px;margin:auto;padding-bottom:0.3em} 
 
 #daily-mail {padding:1em; padding-right: 2.2em; min-height: 640px; width: 85%; margin:auto}
 
